[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "pdfplumber>=0.11.8",
    "python-docx>=1.1.0",
    "striprtf>=0.0.26",
    "odfpy>=1.4.1",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "PyMuPDF>=1.24.0",
    "requests>=2.32.5",
    "streamlit>=1.52.1",
    "tenacity>=9.1.2",
]
